# cloud-resume-backend

./: .gitignore  README.md
.aws-sam/: build.toml
.github/workflows/: deploy.yml
backend/: pyproject.toml  pytest.ini  samconfig.toml  template.yaml
backend/src/: app.py
backend/src/cloud_resume_backend.egg-info/: PKG-INFO  requires.txt
backend/tests/: test_app.py
src/: app.py
src/cloud_resume_backend.egg-info/: SOURCES.txt
tests/: test_app.py
