# backend/pyproject.toml

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-resume-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "boto3",
  "moto>=4.0",
  "pytest"
]

[tool.setuptools]
package-dir = {"" = "src"}
